doc: git repository

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitee.com/quadrakill/ap-utils.git"
+    "url": "https://github.com/hreochen/ap-utils.git"
   },
   "author": "quadrakill",
   "license": "ISC",
