--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@herochen/ap-utils",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0-beta.8",
   "description": "工具函数合集",
   "main": "dist/ap-utils.umd.js",
   "module": "dist/ap-utils.es5.js",
-  "typings": "dist/types/ap-utils.d.ts",
+  "typings": "dist/types/index.d.ts",
   "keywords": [
     "function",
     "tools",
