--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@herochen/ap-utils",
-  "version": "1.0.0-beta.8",
+  "version": "1.0.0-beta.9",
   "description": "工具函数合集",
   "main": "dist/ap-utils.umd.js",
   "module": "dist/ap-utils.es5.js",
   "typings": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "function",
     "tools",
