--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "start": "rollup -c rollup.config.ts -w",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts"
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts",
+    "test":"jest"
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,12 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
     "lodash.camelcase": "^4.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.52.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   }
 }
