--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,7 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "outDir": "dist",
-    "typeRoots": ["node_modules/@types"],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "typeRoots": ["node_modules/@types"]
   },
   "include": ["src"]
 }
